fix styles
- Submit should have a rounded bottom
- I think all the text on the page could do with having slightly more weight
- "How will I learn?" has incorrect margin above the button and button has too much internal padding

--- a/sass/media.scss
+++ b/sass/media.scss
@@ -46,6 +46,10 @@
       border: none;
       box-shadow: none;
     }
+    .card-submit {
+      margin: 0 16px;
+      border-radius: 5px;
+    }
   }
   .type-studies {
     .circle-img {
