--- a/sass/style.scss
+++ b/sass/style.scss
@@ -57,7 +57,7 @@
     font-size: 18px;
     background-color: $pink-color;
     color: $white-color;
-    padding: 22px 0;
+    padding: 20px 0;
     &:hover,
     &:focus {
         color: $white-color;
@@ -69,7 +69,8 @@
     font-size: 18px;
     background-color: $pink-color;
     color: $white-color;
-    padding: 22px 66px;
+    padding: 20px 66px;
+    border-radius: 5px;
     &:hover,
     &:focus {
         color: $white-color;
@@ -186,6 +187,8 @@
     .card-submit {
         background-color: $pink-color;
         border: none;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
     }
 }
 
@@ -225,7 +228,7 @@
         padding: 0 15px;
         .list-item {
             font-weight: normal;
-            font-size: 14px;
+            font-size: 16px;
             color: $blue-color;
         }
     }
