--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -28,7 +28,7 @@ h3 {
 
 p {
     font-weight: normal;
-    font-size: 14px;
+    font-size: 16px;
     color: $blue-color;
 }
 
